// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package kuscia.proto.api.v1alpha1.handshake;

import "kuscia/proto/api/v1alpha1/common.proto";

option go_package = "github.com/secretflow/kuscia/proto/api/v1alpha1/handshake";
option java_package = "com.secretflow.v1alpha1.handshake";

message TokenConfig {
    string token = 1;
    int64 revision = 2;
    string pubhash = 3;
}

// HandShakeRequest represents domainroute handshake request.
message HandShakeRequest {
    // DomainID.
    string domain_id = 1;
    // Type of handshake.
    string type = 2;
    TokenConfig token_config = 3;
    int64 request_time = 4;
}

message Token {
    string token = 1;
    int64 expiration_time = 2;
    int32 revision = 3;
}

message HandShakeResponse {
    Status status = 1;
    Token token = 2;
}

message RegisterRequest{
    string domain_id=1;
    string csr=2;
    int64 request_time=3;
}

message RegisterResponse {
    Status status = 1;
    string cert = 3;
}